@@ -10,10 +10,10 @@
 
 <!ENTITY d-i "<classname>debian-installer</classname>">
 
-<!ENTITY release     "6.0">
-<!ENTITY releasename "squeeze">
-<!ENTITY releasename-cap "Squeeze">
-<!ENTITY releasename-uc "SQUEEZE">
+<!ENTITY release     "7.0">
+<!ENTITY releasename "wheezy">
+<!ENTITY releasename-cap "Wheezy">
+<!ENTITY releasename-uc "WHEEZY">
 
 <!ENTITY FIXME
   "<emphasis>Documentation not complete, text missing.</emphasis>">
