@@ -41,6 +41,7 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
     Stapelberg for the patch. Closes: #413649.
   * Remove PA-RISC architecture from documented supported list.
   * Add partman-lvm/confirm_nooverwrite to preseed example. Closes: #610282.
+  * Update scripts and entities to wheezy name.
 
   [ Steve McIntyre ]
   * Make it clearer how we expect users to write CDs to USB sticks.
